comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eveniet eius quaerat beatae impedit sint error facilis repudiandae, officia ea praesentium incidunt dolore mollitia tempora numquam explicabo. Culpa, excepturi animi!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, distinctio soluta rem quisquam fugiat fugit dolorum ab exercitationem autem, aspernatur ad fuga debitis recusandae doloremque nesciunt. Quas enim dicta a.</p>
         </article>
     </main>
 </body>
